Fix Number Input + and - Buttons on WebKit
The Tauri WebKit  builds had the + and - buttons sticking outside of the
text field and causing layout and scrollbar issue. This makes sure that
the buttons stay within the bounds of the input field.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -22,6 +22,11 @@ a
 body.body--light
   background-color $grey-1
 
+// Hide the +/- buttons on number text fields in Tauri on WebKit
+// input[type=number]::-webkit-inner-spin-button,
+input[type=number]
+  -webkit-appearance none
+
 // This isn't that valuable and caused problems on chrome so taking it out for now
 // Make dark theme switch smooth
 //*
